kubernetes/ingresses/https-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: '35.225.101.58'
    networking.gke.io/managed-certificates: professional-website-certificate
spec:
  backend:
    serviceName: professional-website-web-server-service
    servicePort: 80
