kubernetes/ingresses/https-ingress3.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: jeremiahvaughan.com
      http:
        paths:
          - path: /
            backend:
              serviceName: professional-website-web-server-service
              servicePort: 80
          - path: /foo
            backend:
              serviceName: service1
              servicePort: 80
